--- a/chrome/options.html
+++ b/chrome/options.html
@@ -30,11 +30,14 @@
 </head>
 
 <body>
-    <h4>Enter your YouTube API key:</h4>
+    <h4 data-i18n="options_api_key_title"></h4>
     <input type="text" id="key" />
-    <h5>If no API key use YouTube alternative:</h5>
+    <a href="#" target=_blank data-i18n="options_api_get"></a>
+    <h4 data-i18n="options_url_select_title"></h4>
     <select id="url"></select>
-    <button id="save">Save</button>
+    <small data-i18n="options_url_notes"></small>
+    <hr />
+    <button id="save" data-i18n="options_save"></button>
     <script src="options.js"></script>
 </body>
 
